Prevent horizontal overflow also in body.

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -12,6 +12,7 @@ body {
 @media screen and (max-width: 600px) {
   body {
     background-color: #d5caf2;
+    overflow-x: hidden;
   }
 }
 
